# qt-helloworld

./: CMakeLists.txt  README.md  main.cpp
